--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <footer class="footer" style="margin-top: 70px;">
         <div class="overall">
-            <img class="log" src="./images/nitc_logo.png" alt="College Logo">
+            <img class="log" src="./images/cllglogo.png" alt="College Logo">
             <div class="det">
                 <h4>National Institute of Technology Calicut</h4>
                 <p class="x">NIT Campus P.O 673 601, Kozhikode, India.</p>
